--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   provider: ^4.3.2+2
+  flutter_bloc: ^6.0.6
+  bloc: ^6.1.0
 
 
 dev_dependencies:
