--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   provider: ^4.3.2+2
-  flutter_bloc: ^6.0.6
+  flutter_bloc: ^6.1.1
   bloc: ^6.1.0
+  rxdart: ^0.24.1
 
 
 dev_dependencies:
